--- a/arch/arm/configs/rhine_togari_row_defconfig
+++ b/arch/arm/configs/rhine_togari_row_defconfig
@@ -498,6 +498,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_VFAT_FS_NO_DUALNAMES=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_CIFS=y
