--- a/arch/arm/configs/rhine_honami_row_defconfig
+++ b/arch/arm/configs/rhine_honami_row_defconfig
@@ -500,6 +500,8 @@ CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_VFAT_FS_NO_DUALNAMES=y
 CONFIG_EXFAT_FS=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_CIFS=y
