--- a/arch/arm/configs/rhine_togari_row_defconfig
+++ b/arch/arm/configs/rhine_togari_row_defconfig
@@ -499,6 +499,8 @@ CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_VFAT_FS_NO_DUALNAMES=y
 CONFIG_EXFAT_FS=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
