--- a/net/Kconfig
+++ b/net/Kconfig
@@ -197,11 +197,11 @@ config BRIDGE_NETFILTER
 
 	  If unsure, say N.
 
-source "net/netfilter/Kconfig"
-source "net/ipv4/netfilter/Kconfig"
-source "net/ipv6/netfilter/Kconfig"
+#source "net/netfilter/Kconfig"
+#source "net/ipv4/netfilter/Kconfig"
+#source "net/ipv6/netfilter/Kconfig"
 source "net/decnet/netfilter/Kconfig"
-source "net/bridge/netfilter/Kconfig"
+#source "net/bridge/netfilter/Kconfig"
 
 endif
 
